# lifx-exp

./: TODO.md  packets.txt  stack.yaml  the.cabal
app/: Main.hs
client/: Main.hs
light/: Main.hs
src/: Lib.hs
src/Home/Lights/LIFX/: Transport.hs  Types.hs
test/: Spec.hs
