name:                the
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/the#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                      , base16-bytestring
                      , binary
                      , binary-bits
                      , bytestring
                      , cpu
                      , flat
                      , ghc-prim
                      , network
                      , network-info
                      , stm
                      , async
                      , array
                      , containers
                      , unordered-containers
  default-language:    Haskell2010

executable the-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , the
  default-language:    Haskell2010

test-suite the-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , the
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/the
