name:                the
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/the#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                      , base16-bytestring
                      , binary
                      , binary-bits
                      , bytestring
                      , cpu
                      , flat
                      , hashable
                      , ghc-prim
                      , network
                      , network-info
                      , stm
                      , async
                      , array
                      , containers
                      , monad-control
                      , transformers
                      , mtl
                      , time
                      , text
                      , deepseq
                      , deepseq-generics
                      , unordered-containers
                      , QuickCheck
                      , data-binary-ieee754
                      , data-default
  default-language:    Haskell2010
  ghc-options: -Wall -Werror

executable the-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded
  build-depends:       base
                     , the
                     , async
  default-language:    Haskell2010

executable the-client
  hs-source-dirs:      client
  main-is:             Main.hs
  ghc-options:         -threaded
  build-depends:       base
                     , the
                     , async
                     , optparse-applicative
                     , text-format
                     , binary
                     , pretty-simple
  default-language:    Haskell2010

executable the-light
  hs-source-dirs:      light
  main-is:             Main.hs
  ghc-options:         -threaded
  build-depends:       base
                     , the
                     , async
                     , optparse-applicative
                     , text-format
                     , binary
                     , pretty-simple
                     , network
                     , network-info
                     , time
                     , bytestring
                     , mtl
                     , transformers
                     , data-binary-ieee754
                     , data-default
                     , stm
  default-language:    Haskell2010

test-suite the-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , base16-bytestring
                     , the
                     , hspec
                     , QuickCheck
                     , binary
                     , generic-random
                     , pretty-simple
  ghc-options:         -threaded
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/the
